build: add google checkstyle and GitHub actions
