# image-crud/src/main/java/org/judexmars/imagecrud/dto/account/AccountDto.java
@@ -2,8 +2,14 @@ package org.judexmars.imagecrud.dto.account;
 
 import java.util.UUID;
 
+/**
+ * Account DTO response.
+ *
+ * @param id id of the account
+ * @param username username of the account
+ */
 public record AccountDto(
-        UUID id,
-        String username
+    UUID id,
+    String username
 ) {
 }
