# image-crud/src/main/resources/api.yaml
@@ -3,18 +3,18 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-- url: http://localhost:8080/api/v1
-  description: Generated server url
+  - url: http://localhost:8080/api/v1
+    description: Generated server url
 tags:
-- name: Image Controller
-  description: Базовый CRUD API для работы с картинками
-- name: Authentication Controller
-  description: "API для аутентификации, регистрации и обновления токенов"
+  - name: Image Controller
+    description: Базовый CRUD API для работы с картинками
+  - name: Authentication Controller
+    description: "API для аутентификации, регистрации и обновления токенов"
 paths:
   /image:
     post:
       tags:
-      - Image Controller
+        - Image Controller
       summary: Загрузка нового изображения в систему
       description: |-
         В рамках данного метода необходимо:
@@ -27,7 +27,7 @@ paths:
           multipart/form-data:
             schema:
               required:
-              - file
+                - file
               type: object
               properties:
                 file:
@@ -53,11 +53,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/UiSuccessContainer'
       security:
-      - Auth: []
+        - Auth: [ ]
   /auth/signup:
     post:
       tags:
-      - Authentication Controller
+        - Authentication Controller
       summary: Регистрация аккаунта
       operationId: signUp
       requestBody:
@@ -88,7 +88,7 @@ paths:
   /auth/refresh:
     post:
       tags:
-      - Authentication Controller
+        - Authentication Controller
       summary: Обновление токена
       operationId: refresh
       requestBody:
@@ -119,7 +119,7 @@ paths:
   /auth/login:
     post:
       tags:
-      - Authentication Controller
+        - Authentication Controller
       summary: Вход в аккаунт
       operationId: login
       requestBody:
@@ -150,7 +150,7 @@ paths:
   /images:
     get:
       tags:
-      - Image Controller
+        - Image Controller
       summary: "Получение списка изображений, которые доступны пользователю"
       description: |-
         В рамках данного метода необходимо:
@@ -170,11 +170,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/UiSuccessContainer'
       security:
-      - Auth: []
+        - Auth: [ ]
   /image/{image-id}:
     get:
       tags:
-      - Image Controller
+        - Image Controller
       summary: Скачивание файла по ИД
       description: |-
         В рамках данного метода необходимо:
@@ -183,12 +183,12 @@ paths:
         3. Скачать файл.
       operationId: downloadImage
       parameters:
-      - name: image-id
-        in: path
-        required: true
-        schema:
-          type: string
-          format: uuid
+        - name: image-id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
       responses:
         "200":
           description: Успех выполнения операции
@@ -210,10 +210,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/UiSuccessContainer'
       security:
-      - Auth: []
+        - Auth: [ ]
     delete:
       tags:
-      - Image Controller
+        - Image Controller
       summary: Удаление файла по ИД
       description: |-
         В рамках данного метода необходимо:
@@ -222,12 +222,12 @@ paths:
         3. Удалить файл.
       operationId: deleteImage
       parameters:
-      - name: image-id
-        in: path
-        required: true
-        schema:
-          type: string
-          format: uuid
+        - name: image-id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
       responses:
         "500":
           description: Непредвиденная ошибка
@@ -248,12 +248,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/UiSuccessContainer'
       security:
-      - Auth: []
+        - Auth: [ ]
 components:
   schemas:
     UiSuccessContainer:
       required:
-      - success
+        - success
       type: object
       properties:
         success:
@@ -264,7 +264,7 @@ components:
           description: Сообщение об ошибке
     UploadImageResponse:
       required:
-      - imageId
+        - imageId
       type: object
       properties:
         imageId:
@@ -273,9 +273,9 @@ components:
           format: uuid
     CreateAccountDto:
       required:
-      - confirmPassword
-      - password
-      - username
+        - confirmPassword
+        - password
+        - username
       type: object
       properties:
         username:
@@ -297,15 +297,15 @@ components:
           type: string
     JwtRefreshRequest:
       required:
-      - token
+        - token
       type: object
       properties:
         token:
           type: string
     JwtRequest:
       required:
-      - password
-      - username
+        - password
+        - username
       type: object
       properties:
         username:
@@ -314,7 +314,7 @@ components:
           type: string
     GetImagesResponse:
       required:
-      - images
+        - images
       type: object
       properties:
         images:
@@ -324,8 +324,8 @@ components:
             $ref: '#/components/schemas/Image'
     Image:
       required:
-      - filename
-      - size
+        - filename
+        - size
       type: object
       properties:
         imageId:
